Improve ByteBufferPool cache locality, stats, and direct buffers clean up